added background to header

--- a/src/containers/HeadingContainer/HeadingContainer.scss
+++ b/src/containers/HeadingContainer/HeadingContainer.scss
@@ -3,4 +3,5 @@
 .headingContainer {
     display: flex;
     justify-content: space-evenly;
+    background-image: url("../../assets/Images/pokeballBG.gif");
 }
