--- a/src/components/ProfileHeader/ProfileHeader.scss
+++ b/src/components/ProfileHeader/ProfileHeader.scss
@@ -11,6 +11,10 @@
 }
 .profileHeader {
   display: flex;
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
   &__img {
     max-width: 100px;
     height: 100px;
