--- a/src/Pages/PokeInfo/PokeInfo.scss
+++ b/src/Pages/PokeInfo/PokeInfo.scss
@@ -1,35 +1,17 @@
 @use "../../assets/styles/variables" as *;
 
 .pokeInfo {
-  margin: auto 30px;
+  margin: auto;
   position: relative;
-  width: 70vw;
-  height: 90vw;
+  width: 90vw;
+  height: 30vw;
+  background-color: darkgray;
 
-  &__container {
+  &__header {
+    margin: 20px;
     display: flex;
-    margin: 60px auto;
-    padding: 20px;
-    overflow: hidden;
-    overflow-y: auto;
-    width: 50vw;
-    height: 60vw;
-    border-radius: 15px;
-  }
-
-  &__cross {
-    position: absolute;
-    height: 25px;
-    width: 25px;
-    right: 30px;
-    top: 15px;
-  }
-
-  &__img {
-    margin: auto;
-    margin-bottom: 100px;
-    max-width: 10vh;
-    height: 10vh;
+    max-width: auto;
+    justify-content: space-between;
   }
 
   &__heading {
@@ -38,7 +20,44 @@
     font-size: 50px;
   }
 
-  &__content {
+  &__grid {
+    display: flex;
+  }
+
+  &__profile {
+    width: 25vw;
+    height: 40vh;
+  }
+
+  &__images {
+    position: relative;
+    top: 100px;
+    right: 100px;
+  }
+
+  &__pokeball {
+    position: relative;
+    width: 13vw;
+    height: 13vw;
+    top: 10px;
+    left: 100px;
+  }
+
+  &__pokeImg {
+    position: absolute;
+    width: 13vh;
+    height: 13vh;
+    top: 80px;
+    right: 100px;
+  }
+  &__description {
     margin: auto;
+    width: 50vw;
+    height: 20vh;
+  }
+
+  &__cross {
+    height: 25px;
+    width: 25px;
   }
 }
