--- a/src/containers/HeadingContainer/HeadingContainer.scss
+++ b/src/containers/HeadingContainer/HeadingContainer.scss
@@ -2,9 +2,14 @@
 
 .headingContainer {
     display: flex;
+    height: 15vh;
     justify-content: space-evenly;
     align-items: center;
     background-size: cover;
     background-image: url("../../assets/Images/pokeballBG.gif");
     background-attachment: fixed;
+
+    &__logo {
+        width: 14vw;
+    }
 }
