--- a/src/components/RandomCard/RandomCard.scss
+++ b/src/components/RandomCard/RandomCard.scss
@@ -114,7 +114,7 @@
       }
       
       &__container &__card &__contentBox &__info  p{
-        margin: 20px auto;
+        margin: 20px 10px;
         text-align: center;
         font-size: 16px;
         display: inline-block;
