--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,8 +3,9 @@
 .header{
 
     &__title{
-        font-size: 50px;
-        text-decoration: underline;
-        color: white;
+        font-size: 40px;
+        font-weight: 400;
+        letter-spacing: 5px;
+        color: #fff;
     }
 }
