--- a/src/containers/CardContainer/CardContainer.scss
+++ b/src/containers/CardContainer/CardContainer.scss
@@ -4,12 +4,12 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 70vw;
-    height: 70vh;
+    width: 80vw;
+    height: 75vh;
     overflow-x: auto;
   }
   
   .pokeCard__unAvailable{
-    margin: auto;
+    margin: auto 500px;
     font-size: 50px;
   }
