--- a/src/containers/HeadingContainer/HeadingContainer.scss
+++ b/src/containers/HeadingContainer/HeadingContainer.scss
@@ -1,15 +1,15 @@
 @use "../../assets/styles/variables" as *;
 
 .headingContainer {
-    display: flex;
-    height: 15vh;
-    justify-content: space-evenly;
-    align-items: center;
-    background-size: cover;
-    background-image: url("../../assets/Images/pokeballBG.gif");
-    background-attachment: fixed;
+  display: flex;
+  height: 15vh;
+  justify-content: space-around;
+  align-items: center;
+  background-size: cover;
+  background-image: url("../../assets/Images/pokeballBG.gif");
+  background-attachment: fixed;
 
-    &__logo {
-        width: 14vw;
-    }
+  &__logo {
+    width: 14vw;
+  }
 }
