--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,12 +1,28 @@
 @use "../../assets/styles/variables" as *;
 
 .searchBar {
-  &__input {
+  background: #fff;
+  height: 30px;
+  border-radius: 30px;
+  color: #505050;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.8s;
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.3), -4px -4px 6px 0 rgba(116, 125, 136, 0.2), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, 0.2);
+  .searchBar:hover &__input {
     width: 400px;
-    height: 30px;
-    margin: auto;
-    border-radius: 5px;
-    border: 2px solid grey;
-    font-size: medium;
+  }
+  .searchBar &__input {
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 0px;
+    font-weight: 500;
+    font-size: 16px;
+    transition: 0.8s;
   }
 }
