--- a/src/Pages/PokeDex/PokeDex.scss
+++ b/src/Pages/PokeDex/PokeDex.scss
@@ -1,10 +1,13 @@
 @use "../../assets/styles/variables" as *;
 
+.pokeDex {
+  width: 100vw;
+  height: 100vh;
+}
 .layout {
-    display: flex;
+  display: flex;
 }
 
 .Nav {
-    width: 15vw;
-    height: auto;
+  width: 15vw;
 }
