--- a/src/containers/MainContainer/MainContainer.scss
+++ b/src/containers/MainContainer/MainContainer.scss
@@ -1,8 +1,8 @@
 @use "../../assets/styles/variables" as *;
 
 .mainContainer{
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px;
 }
