--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,30 +1,54 @@
 @use "../../assets/styles/variables" as *;
 
 .profile {
-    display: flex;
-    width: 50vw;
-    height: 50vh;
-    margin: 100px auto;
-    align-items: center;
-    background-color: blanchedalmond;
-    border-radius: 30px;
+  &__container {
+    width: 130%;
+    min-height: 470px;
+    margin: auto;
+    box-shadow: 0px 8px 60px -10px rgba(13, 28, 39, 0.6);
+    background: #fff;
+    border-radius: 12px;
+    max-width: 700px;
+    position: relative;
+  }
 
-    &__heading {
-        font-size: 30px;
-    }
+  &__heading {
+    font-weight: 700;
+    font-size: 24px;
+    color: #6944ff;
+    margin-bottom: 15px;
+    letter-spacing: 3px;
+    font-weight: 400;
+  }
 
-    &__image {
-        margin: 20px;
-        width: 17vw;
-        height: 35vh;
-        border-radius: 100px;
-    }
-
-    &__content {
-        margin: auto;
-    }
-
-    &__team {
-        margin: 20px;
-    }
+  &__image {
+    width: 150px;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    z-index: 4;
+    box-shadow: 0px 5px 50px 0px rgb(108, 68, 252), 0px 0px 0px 7px rgba(107, 74, 255, 0.5);
+  }
+  &__userInfo {
+    margin-bottom: 20px;
+  }
+  &__team {
+    margin: 20px;
+  }
+  &__select {
+    margin: 5px;
+    background-color: #6944ff;
+    border-radius: 5px;
+    color: #fff;
+    width: 10vw;
+    height: 3vh;
+  }
+ 
+  &__select:hover {
+    background-color: #907be0;
+  }
 }
