--- a/src/components/AddTeam/AddTeam.scss
+++ b/src/components/AddTeam/AddTeam.scss
@@ -1,29 +1,94 @@
 @use "../../assets/styles/variables" as *;
 
 .addTeam {
-    margin: auto;
-    &__name {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    &__nameLabel {
-        font-size: larger;
-    }
+  margin: 100px auto;
+  border: 5px solid #a6272c;
+  border-radius: 10px;
+  max-width: 500px;
+  background-color: #fff;
+  box-shadow: 12px 10px 13px rgba(#202020, 0.7);
 
-    &__pokeTeam {
-        margin: 20px;
-        display: flex;
-        flex-direction: column;
-    }
+  &__heading {
+    color: #505050;
+    font-weight: 400;
+    letter-spacing: 5px;
+  }
 
-    &__pokeLabel {
-        margin: 10px;
-        font-size: larger;
-    }
+  &__instruction{
+    color: #505050;
+    margin: 20px;
+    text-align: left;
+  }
 
-    &__nameInput {
-        width: 30vw;
-    }
+  &__name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__nameLabel {
+    font-size: larger;
+  }
 
+  &__pokeTeam {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__pokeLabel {
+    margin: 10px;
+    font-size: larger;
+  }
+
+  &__nameInput {
+    width: 30vw;
+  }
+
+  &__input {
+    border: 0;
+    padding: 5px 0 7px;
+    border: 1px solid transparent;
+    border-bottom-color: #a6272c;
+    transition: 0.4s;
+    background-color: #fff;
+  }
+
+  &__input:focus {
+    padding: 5px 14px 7px;
+    transition: 0.4s;
+    outline: none;
+  }
+
+  &__input ~ .focus-border {
+    position: absolute;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    width: 15vw;
+    border-radius: 2px;
+    transition: 0.4s;
+    z-index: -1;
+  }
+
+  &__input:focus ~ .focus-border {
+    transition: 0.4s;
+    height: 36px;
+    border: 2px solid #a6272c;
+    z-index: 1;
+  }
+
+  &__inputFocus {
+    float: left;
+    width: 27.33%;
+    margin: 40px 3%;
+    position: relative;
+  }
+
+  &__input[type="text"] {
+    font: 15px/24px "Lato", Arial, sans-serif;
+    color: #fff;
+    width: 15vw;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+  }
 }
