--- a/src/components/AddTeam/AddTeam.scss
+++ b/src/components/AddTeam/AddTeam.scss
@@ -14,7 +14,7 @@
     letter-spacing: 5px;
   }
 
-  &__instruction{
+  &__instruction {
     color: #505050;
     margin: 20px;
     text-align: left;
@@ -86,7 +86,7 @@
 
   &__input[type="text"] {
     font: 15px/24px "Lato", Arial, sans-serif;
-    color: #fff;
+    color: #505050;
     width: 15vw;
     box-sizing: border-box;
     letter-spacing: 1px;
