--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -57,6 +57,7 @@
     font-weight: 400;
   }
   &__trainerInfo {
+    height: fit-content;
     background-color: #a6272c;
     color: #fff;
     border-radius: 10px;
@@ -73,10 +74,11 @@
     }
     background-color: #505050;
     color: #fff;
-    height: 22px;
-    padding: 8px 8px;
-    margin: 0;
-    font-size: 9px;
+    height: 39px;
+    padding: 11px 20px;
+    margin: 10px;
+    font-size: 12px;
+    margin-left: 7px;
     border-radius: 5px;
   }
 }
