--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,9 +3,9 @@
 .header{
 
     &__title{
-        font-size: 40px;
-        font-weight: 400;
+        font-family: $titleOne-font-family;
+        font-size: 35px;
         letter-spacing: 5px;
-        color: #fff;
+        color: $secondary-color;
     }
 }
