--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -6,7 +6,7 @@
     min-height: 470px;
     margin: auto;
     box-shadow: 0px 8px 60px -10px rgba(13, 28, 39, 0.6);
-    background: #fff;
+    background: $secondary-color;
     border-radius: 12px;
     max-width: 700px;
     position: relative;
@@ -15,7 +15,7 @@
   &__heading {
     font-weight: 700;
     font-size: 24px;
-    color: #a6272c;
+    color: $primary-color;
     margin-bottom: 15px;
     letter-spacing: 3px;
     font-weight: 400;
@@ -41,15 +41,15 @@
   }
   &__select {
     margin: 5px;
-    background-color: #a6272c;
+    background-color: $primary-color;
     border-radius: 5px;
-    color: #fff;
+    color: $secondary-color;
     width: 10vw;
     height: 3vh;
   }
 
   &__select:hover {
-    background-color: #e42228;
+    background-color: $primary-accent-color;
   }
 
   &__trainerName {
@@ -58,8 +58,8 @@
   }
   &__trainerInfo {
     height: fit-content;
-    background-color: #a6272c;
-    color: #fff;
+    background-color: $primary-color;
+    color: $secondary-color;
     border-radius: 10px;
   }
 
@@ -72,8 +72,8 @@
     &:active {
       opacity: 0.8;
     }
-    background-color: #505050;
-    color: #fff;
+    background-color: $tertiaryColour;
+    color: $secondary-color;
     height: 39px;
     padding: 11px 20px;
     margin: 10px;
