--- a/src/components/RandomCard/RandomCard.scss
+++ b/src/components/RandomCard/RandomCard.scss
@@ -8,7 +8,7 @@
         position: relative;
         width: 320px;
         height: 450px;
-        background: #232323;
+        background: $tertiary-card-color;
         border-radius: 20px;
         overflow: hidden;
     }
@@ -29,8 +29,9 @@
       &__container &__card:after{
         content: 'PikaDex';
         position: absolute;
-        top: 30%;
+        top: 50%;
         left: -20%;
+        font-family: $titleOne-font-family;
         font-size: 12em;
         font-weight: 800;
         font-style: italic;
@@ -77,7 +78,7 @@
         position: relative;
         font-weight: 600;
         letter-spacing: 1px;
-        color: #fff;
+        color: $secondary-color;
         margin: 0;
       }
       
@@ -105,7 +106,7 @@
       }
       
       &__container &__card &__contentBox &__info h3, &__container &__card &__contentBox &__color h3{
-        color: #fff;
+        color: $secondary-color;
         font-weight: 300;
         font-size: 14px;
         text-transform: uppercase;
@@ -118,7 +119,7 @@
         text-align: center;
         font-size: 16px;
         display: inline-block;
-        color: #fff;
+        color: $secondary-color;
         transition: 0.5s;
       }
       
