changed scss for nav items

--- a/src/components/AddTeam/AddTeam.scss
+++ b/src/components/AddTeam/AddTeam.scss
@@ -5,6 +5,7 @@
   border: 5px solid $primary-color;
   border-radius: 10px;
   max-width: 500px;
+  height: 550px;
   background-color: $secondary-color;
   box-shadow: 12px 10px 13px rgba(#202020, 0.7);
 
