--- a/src/components/PokeInfoCard/PokeInfoCard.scss
+++ b/src/components/PokeInfoCard/PokeInfoCard.scss
@@ -8,7 +8,7 @@
     padding: 1em;
     border-radius: 15px;
     text-align: left;
-    box-shadow: -3px -3px 3px 0 rgba(#26e6f7, 0.6), 3px 3px 3px 0 rgba(#f759e4, 0.6), 0 0 6px 2px rgba(#ffe759, 0.6),
+    box-shadow: -3px -3px 3px 0 rgba(#f759e4, 0.6), 3px 3px 3px 0 rgba(#ffe759, 0.6), 0 0 6px 2px rgba(#26e6f7, 0.6),
       0 35px 25px -15px rgba(0, 0, 0, 0.5);
     background-color: $tertiaryColour;
     background-blend-mode: color-dodge;
@@ -19,6 +19,8 @@
 
   &__container:hover {
     transform: perspective(1000px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    box-shadow: -3px -3px 3px 0 rgba(#26e6f7, 0.6), 3px 3px 3px 0 rgba(#f759e4, 0.6), 0 0 6px 2px rgba(#ffe759, 0.6),
+      0 35px 25px -15px rgba(0, 0, 0, 0.5);
   }
 
   &__header {
@@ -84,6 +86,10 @@
     box-shadow: -3px -3px 3px 0 rgba(#26e6f7, 0.6), 3px 3px 3px 0 rgba(#ffe759, 0.6), 0 0 6px 2px rgba(#f759e4, 0.6),
       0 35px 25px -15px rgba(0, 0, 0, 0.5);
   }
+  &__add:hover {
+    box-shadow: -3px -3px 3px 0 rgba(#ffe759, 0.6), 3px 3px 3px 0 rgba(#f759e4, 0.6), 0 0 6px 2px rgba(#26e6f7, 0.6),
+      0 35px 25px -15px rgba(0, 0, 0, 0.5);
+  }
 
   &__delete {
     width: fit-content;
@@ -106,5 +112,10 @@
     padding: 11px 20px;
     box-shadow: -3px -3px 3px 0 rgba(#f759e4, 0.6), 3px 3px 3px 0 rgba(#ffe759, 0.6), 0 0 6px 2px rgba(#26e6f7, 0.6),
       0 35px 25px -15px rgba(0, 0, 0, 0.5);
+  }
+
+  &__delete:hover{
+    box-shadow: -3px -3px 3px 0 rgba(#ffe759, 0.6), 3px 3px 3px 0 rgba(#26e6f7, 0.6), 0 0 6px 2px rgba(#f759e4, 0.6),
+    0 35px 25px -15px rgba(0, 0, 0, 0.5);
   }
 }
